<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="?colorPrimary"
        android:backgroundTint="?colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="72dp"
        app:contentInsetStart="72dp"
        app:elevation="8dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">

        <TextView
            android:id="@+id/logo_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dip"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                app:divider="@drawable/about_line_divider"
                app:showDividers="middle|end">

                <TextView
                    android:id="@+id/action_rate_us"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/rate_us_on_play_store"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="visible"
                    app:drawableStartCompat="@drawable/ic_star"
                    app:drawableTint="?colorPrimary" />

                <TextView
                    android:id="@+id/action_other_apps"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/our_others_apps"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_android"
                    app:drawableTint="?colorPrimary" />

                <TextView
                    android:id="@+id/action_share"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/spread_the_word"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="visible"
                    app:drawableStartCompat="@drawable/ic_share2"
                    app:drawableTint="?colorPrimary" />

                <TextView
                    android:id="@+id/action_give_feedback"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/feed_us_back"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="visible"
                    app:drawableStartCompat="@drawable/ic_feedback"
                    app:drawableTint="?android:attr/colorPrimary" />

                <TextView
                    android:id="@+id/action_check_update"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/check_for_update"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="visible"
                    app:drawableStartCompat="@drawable/ic_update"
                    app:drawableTint="?android:attr/colorPrimary" />

                <TextView
                    android:id="@+id/action_privacy_policy"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/privacy_policy"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_policy"
                    app:drawableTint="?colorPrimary" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
